# ahriknow

./: CMakeLists.txt  README.md  README_en.md  ahriknow.qrc  main.cpp
inc/: ahriknowwindow.h  generate.h  layout.h  pluginmanager.h  setting.h  wrapperwidget.h
src/: ahriknowwindow.cpp  generate.cpp  layout.cpp  pluginmanager.cpp  setting.cpp  wrapperwidget.cpp
